--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 			<div id="content">
 
 <p></p>
-<h1><center>Searching for globular clusters in the inner halo of the Circinus galaxy</center></h1>
+<h1><center>Open Clusters Members in the APOGEE DR17. I. Using Clustering Algorithm HDBSCAN to Find Memberships</center></h1>
 
 <td><center><img src="Circinus.png" width="50%"><p></p></center></td>
 <p align="justify">
 <center><b>Figure 1:</b> DECam composite image of the Circinus galaxy.</center>
 </p>
 
-<td><center><img src="figEE.png" width="50%"><p></p></center></td>
+<td><center><img src="cluster.png" width="50%"><p></p></center></td>
 <p align="justify">
-<center><b>Figure 2:</b> Map of VVV NIRGC III galaxies within 1deg centered in Circinus, matched with SIMBAD (NED) (green circles) Big ellipse: extension of the Circinus atomic and molecular gas from [5,6]. Small ellipse: optical extension of the Circinus disk and the small ellipse indicates the optical extension of the Circinus disk. </center>
+<center><b>Figure 2:</b> Orbits ... </center>
 </p>
 
 				
 <h2>Authors</h2>
 
 <p>				
-<b>C. Obasi</b>(1), M. G&oacute;mez(2), D. Minniti (2,3), J. G. Fern&aacute;ndez-Trincado(4), M. V. Alonso(5,6), L. Baravalle(5), B. I. Okere(1), &amp Bruno Dias(2)
+<b>R. Guerco</b>(1), M. G&oacute;mez(2), D. Minniti (2,3), J. G. Fern&aacute;ndez-Trincado(4), M. V. Alonso(5,6), L. Baravalle(5), B. I. Okere(1), &amp Bruno Dias(2)
 </p>
 	
 <h2>Affiliations</h2>
@@ -70,7 +70,7 @@ ________________________________________________________________________________
 Page maintained by J. G. Fern&aacute;ndez-Trincado
 </p>
 <p>
- Last Update: 2024 July 16 
+ Last Update: 2024 August 29 
  </p>
 
 
