--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <p></p>
 <h1><center>Open Clusters Members in the APOGEE DR17. I. Using Clustering Algorithm HDBSCAN to Find Memberships</center></h1>
 
-<td><center><img src="Circinus.png" width="50%"><p></p></center></td>
+<td><center><img src="Orbits/Figure_Ter2.png" width="50%"><p></p></center></td>
 <p align="justify">
-<center><b>Figure 1:</b> DECam composite image of the Circinus galaxy.</center>
+<center><b>Figure 1:</b> Orbits ...</center>
 </p>
 
 <td><center><img src="cluster.png" width="50%"><p></p></center></td>
