--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <h2>Contact</h2>
 
-<p>Please let me know if you have any questions or suggestions: casmiroluabuchukwuobasi&#64;gmail.com</p>	
+<p>Please let me know if you have any questions or suggestions: rafael.fraga&#64;ucn.cl</p>	
 	
 ______________________________________________________________________________________________
 <p>
